Fix: Closed Icon - Thicker, Larger, Padding reduce at clipped #179

--- a/userChrome.css
+++ b/userChrome.css
@@ -994,15 +994,30 @@
     visibility: collapse !important;
   }
 
-  /* Closed Button Smaller */
+  /* Closed Button's icon thicker */
+  .tabbrowser-tab .tab-content > .close-icon {
+    list-style-image: url(./icons/dismiss-filled.svg) !important;
+  }
+
+  /* Closed Button's icon larger */
+  .tab-close-button {
+    padding: 6px !important; /* Original: 7px */
+  }
+  .tabbrowser-tab:not(:hover) > .tab-stack > .tab-content > .tab-close-button {
+    padding-inline-start: 1px !important; /* Original: 0px */
+    width: 19px !important; /* Original: 17px */
+  }
+
+  /* Closed Button's padding reduce */
   #tabbrowser-tabs[closebuttons="activetab"] .tab-content > .tab-close-button {
-    padding: 5px !important; /* Original: 7px */
+    margin-inline-end: calc((var(--inline-tab-padding) / -2) + 2px) !important; /* Original: calc(var(--inline-tab-padding) / -2)*/
+    padding: 4px !important; /* Original: 7px */
     width:  20px !important; /* Original: 24px */
     height: 20px !important; /* Original: 24px */
   }
   #tabbrowser-tabs[closebuttons="activetab"] .tabbrowser-tab:not(:hover) > .tab-stack > .tab-content > .tab-close-button {
-    padding-inline-start: 2px !important; /* Original: 0px */
-    width: 17px !important; /* Redefine from 20px !important, Original: 17px = (width - padding)  */
+    padding-inline-start: 3px !important; /* Original: 0px */
+    width: 19px !important; /* Redefine from 19px !important, Original: 17px = (width - padding)  */
   }
 
   /** Sound Tab - Hide Label **************************************************/
